[package]
name = "curve"
version = "0.6.0"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides curves."
documentation = "https://bodoni.github.io/curve"
homepage = "https://github.com/bodoni/curve"
repository = "https://github.com/bodoni/curve"

[dependencies]
num-traits = "0.1"

[dev-dependencies]
assert = "0.7"
