[package]
name = "curve"
version = "0.9.2"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides curves."
documentation = "https://docs.rs/curve"
homepage = "https://github.com/bodoni/curve"
repository = "https://github.com/bodoni/curve"

[dependencies]
num-traits = "0.2"

[dev-dependencies]
assert = "0.7"
